--- a/components/TagsMenu/TagsMenu.module.css
+++ b/components/TagsMenu/TagsMenu.module.css
@@ -1,4 +1,4 @@
-
+/* components/TagsMenu/TagsMenu.module.css */
 
 .menuContainer {
   position: relative;
@@ -42,7 +42,7 @@
   margin: 0;
 }
 
-
+/* убираем фиолетовый visited и подчёркивание */
 .menuLink,
 .menuLink:link,
 .menuLink:visited {
